--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
+bcrypt==4.1.2
 blinker==1.7.0
 click==8.1.7
 dnspython==2.4.2
 email-validator==2.1.0.post1
 Flask==3.0.1
+Flask-Bcrypt==1.0.1
 Flask-SQLAlchemy==3.1.1
 Flask-WTF==1.2.1
 idna==3.6
